tests/tc/neg/union04.js

/*@ foo :: forall A. (A) => A */
function foo(x) {

  var v = x + 1;

  return v;

}
